
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {scalar_t__ h_addr; } ;


 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;

unsigned long resolve_host(char* host)
{
 long res;
 struct hostent* he;

 if (0 > (res = inet_addr(host)))
 {
  if (!(he = gethostbyname(host)))
   return(0);
  res = *(unsigned long*)he->h_addr;
 }
 return(res);
}
