; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_282.c_resolve_host.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_282.c_resolve_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @resolve_host(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @inet_addr(i8* %6)
  store i64 %7, i64* %4, align 8
  %8 = icmp sgt i64 0, %7
  br i1 %8, label %9, label %20

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call %struct.hostent* @gethostbyname(i8* %10)
  store %struct.hostent* %11, %struct.hostent** %5, align 8
  %12 = icmp ne %struct.hostent* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i64 0, i64* %2, align 8
  br label %22

14:                                               ; preds = %9
  %15 = load %struct.hostent*, %struct.hostent** %5, align 8
  %16 = getelementptr inbounds %struct.hostent, %struct.hostent* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to i64*
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %4, align 8
  br label %20

20:                                               ; preds = %14, %1
  %21 = load i64, i64* %4, align 8
  store i64 %21, i64* %2, align 8
  br label %22

22:                                               ; preds = %20, %13
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
